--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -141,7 +141,7 @@
             <pagination-controls display="inline" (pageChange)="paginate($event)"
                                  style="display: inline-block;"></pagination-controls>
             <button (click)="paginate(MathCeil(totalItems/itemsPerPage))">Last</button>
-            <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+            <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
 
         </div>
 
