--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -6,7 +6,7 @@
         <div class="col-lg-12 col-sm-12">
             <div class="heading">{{getTitle()}}
                 <button mat-raised-button color="primary" *ngIf="createCustomer.CustomerStatus=='A'"
-                        style="float:right;" (click)="viewHistory()">View History
+                        style="float:right;" (click)="viewHistory()"><mat-icon class="mr-2">history</mat-icon>View History
                 </button>
             </div>
         </div>
