--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -130,9 +130,9 @@
                             <mat-icon style="margin-left: 2px;" title="Edit Customer">edit</mat-icon>
                         </button>
 
-                        <button mat-icon-button color="primary" *ngIf="!CheckEditStatus(customer)"
+                        <button mat-icon-button *ngIf="!CheckEditStatus(customer)"
                                 (click)="viewCustomer(customer)">
-                            <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
+                            <mat-icon class="text-green" style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
@@ -172,7 +172,7 @@
         <pagination-controls display="inline" (pageChange)="paginate($event)"
                              style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(MathCeil(total_customers_length/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b>{{total_customers_length}}</b> items</p>
+        <p style="float:right;">Total <b class="text-green">{{total_customers_length}}</b> items</p>
 
     </div>
 </div>
