--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -208,7 +208,7 @@
                             mat-icon-button
                             (click)="viewVendor(vendor)"
                         >
-                            <mat-icon title="View Vendor" color="primary"
+                            <mat-icon  class="text-green" title="View Vendor" color="primary"
                             >visibility
                             </mat-icon
                             >
