--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -377,6 +377,7 @@
                             <mat-icon
                                 style="margin-left: 2px"
                                 title="View Recovery"
+                                class="text-green"
                             >visibility
                             </mat-icon>
                         </button>
