--- a/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
+++ b/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
@@ -158,7 +158,7 @@
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
                                 </button>
                                 <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
-                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
+                                    <mat-icon  class="text-green" style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
                                 </button>
                             </mat-cell>
                         </ng-container>
@@ -184,7 +184,7 @@
                     <pagination-controls display="inline" (pageChange)="paginate($event)"
                                          style="display: inline-block;"></pagination-controls>
                     <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-                    <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+                    <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
 
                 </div>
 
