--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -60,7 +60,7 @@
                         <mat-cell *matCellDef="let activity">
                             <button mat-icon-button color="primary"
                                     (click)="createOrEditItem(activity)">
-                                <mat-icon>
+                                <mat-icon  class="text-green">
                                     {{ activity.isCoreactivity ? 'visibility' : 'create' }}
                                 </mat-icon>
                             </button>&nbsp;
