--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -83,7 +83,7 @@
                                     <td>{{child.ActivityUrl}}</td>
                                     <td>
                                         <button mat-icon-button color="primary" (click)="editActivity(child)">
-                                            <mat-icon>
+                                            <mat-icon  class="text-green">
                                                 {{ activity.isCoreactivity ? 'visibility' : 'create' }}
                                             </mat-icon>
                                         </button>&nbsp;
