--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -811,3 +811,17 @@ img {
         }
     }
 }
+
+.ngx-pagination .current {
+    padding: 0.1875rem 0.625rem;
+    background: #01671B !important;
+    color: #fefefe;
+    cursor: default;
+}
+table{
+    tr {
+        td{
+            font-size: 12px;
+        }
+    }
+}
