--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -167,7 +167,7 @@
 
                         <button mat-icon-button color="primary" *ngIf="CheckViewStatus(jv)"
                                 (click)="editJv(jvocher)">
-                            <mat-icon style="margin-left: 2px;" title="View jv">visibility</mat-icon>
+                            <mat-icon class="text-green" style="margin-left: 2px;" title="View jv">visibility</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
@@ -200,7 +200,7 @@
         <pagination-controls display="inline" (pageChange)="paginate($event)"
                              style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+        <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
 
     </div>
 </div>
