--- a/src/app/modules/land-creation/land-history/land-history.component.html
+++ b/src/app/modules/land-creation/land-history/land-history.component.html
@@ -65,7 +65,7 @@
                     <mat-cell *matCellDef="let land">
                         <button mat-icon-button color="primary"
                                 (click)="editland(land)">
-                            <mat-icon style="margin-left: 2px;" title="View land">visibility</mat-icon>
+                            <mat-icon class="text-green" style="margin-left: 2px;" title="View land">visibility</mat-icon>
                         </button>
 
                     </mat-cell>
