--- a/src/app/modules/loan/cl-view-loan/cl-view-loan.component.html
+++ b/src/app/modules/loan/cl-view-loan/cl-view-loan.component.html
@@ -151,7 +151,7 @@
                             <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
                             <mat-cell *matCellDef="let loan">
                                 <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
-                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
+                                    <mat-icon class="text-green" style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
                                 </button>
                             </mat-cell>
                         </ng-container>
@@ -177,7 +177,7 @@
                     <pagination-controls display="inline" (pageChange)="paginate($event)"
                                          style="display: inline-block;"></pagination-controls>
                     <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-                    <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+                    <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
 
                 </div>
 
