--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -183,12 +183,14 @@
 
 
         <div class="row">
-            <div class="col-lg-12  py-2 border-t">
+            <div class="col-lg-12 flex  py-2 border-t">
 
                 <button mat-raised-button class="mr-2" color="primary" (click)="uploadDocuments()">
                     <mat-icon class="mr-2">check_circle</mat-icon>
                     Upload Documents
                 </button>
+
+
                 <button style="background-color: #01671B;" mat-raised-button class="mr-2" color="primary"
                         (click)="SaveData()">
                     <mat-icon class="mr-2">save</mat-icon>
@@ -199,17 +201,18 @@
                     Submit
                 </button>
                 <button mat-raised-button
-                        class="mr-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                        color="primary" (click)="clear()">
+                    class="mr-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"
+                    color="primary" (click)="clear()">
                     <mat-icon class="mr-2"> clear_all</mat-icon>
                     Clear
                 </button>
                 <button mat-raised-button
-                        class=" mat-focus-indicator  btn bg-red-500 text-white rounded-md ml-2 mat-raised-button mat-button-base mat-danger"
+                        class=" mat-focus-indicator  btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"
                         color="primary" (click)="cancelTransaction()">
                     <mat-icon class="mr-2">cancel</mat-icon>
                     Cancel Transaction
                 </button>
+
 
             </div>
         </div>
