--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -164,7 +164,7 @@
 
                                 <button mat-icon-button color="primary" *ngIf="CheckViewStatus(child)"
                                         (click)="viewTourPlan(child)">
-                                    <mat-icon title="View land">visibility</mat-icon>
+                                    <mat-icon  class="text-green" title="View land">visibility</mat-icon>
                                 </button>
                                 <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"
                                         (click)="editTourPlan(child)">
@@ -201,7 +201,7 @@
         <pagination-controls display="inline" (pageChange)="paginate($event)"
                              style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+        <p style="float:right;">Total <b  class="text-green">{{totalItems}}</b> items</p>
 
     </div>
 </div>
