--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
@@ -169,7 +169,7 @@
             </mat-table>
 
         </div>
-        <div class="flex flex-shrink-0 items-center py-4 " *ngIf="dataSource.length>0">
+        <div class="flex flex-shrink-0 items-center py-4 bg-green " *ngIf="dataSource.length>0">
             <button mat-raised-button color="primary" (click)="Submit()">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Submit All
