--- a/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
+++ b/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
@@ -20,8 +20,8 @@
         <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
             <div class="kt-form__actions kt-form__actions--sm mt-4">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-                <button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-green text-white"
-                        color="primary" cdkFocusInitial [disabled]="viewLoading">OK
+                <button mat-flat-button (click)="onNoClick()" class="btn btn-success bg-green text-white"
+                        cdkFocusInitial [disabled]="viewLoading"><mat-icon class="text-white text-xl mr-3">check</mat-icon>OK
                 </button>
             </div>
         </div>
