--- a/src/app/shared/crud/alert-dialog/alert-dialog.component.html
+++ b/src/app/shared/crud/alert-dialog/alert-dialog.component.html
@@ -21,8 +21,8 @@
         <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
             <div class="kt-form__actions kt-form__actions--sm mt-4">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-                <button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-red-500 text-white"
-                        color="primary" cdkFocusInitial
+                <button mat-flat-button (click)="onNoClick()" class="btn btn-success bg-red-500 text-white"
+                        cdkFocusInitial
                         [disabled]="viewLoading">OK
                 </button>
             </div>
