--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.scss
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.scss
@@ -1,6 +1,6 @@
 #chart {
-    width: 450px;
-    padding: 0;
+    width: 110%;
+    padding: 0 12px;
   }
   .table td, .table th {
     font-size: 14px;
