--- a/src/app/shared/crud/alert-message/alert-message.component.html
+++ b/src/app/shared/crud/alert-message/alert-message.component.html
@@ -5,11 +5,11 @@
             <div class="form-group">
 
                 <div class="col-lg-12 text-center mt-1">
-                    <img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto"
+                    <img src="./assets/media/icons/alert.png" class="img-responsive center-block w-24 mx-auto"
                          alt="icon"/>
                 </div>
 
-                <div class="col-lg-12 text-center mt-5">
+                <div class="col-lg-12 text-center mt-3">
                     <span style="font-weight:500" [innerHTML]="data.description"></span>
                 </div>
             </div>
@@ -17,7 +17,7 @@
         <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
             <div class="kt-form__actions kt-form__actions--sm  mt-4">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-                <button mat-button (click)="onNoClick()" class="btn btn-success btn-block bg-green" color="primary"
+                <button mat-flat-button (click)="onNoClick()" class="btn btn-success text-white bg-red-500" 
                         cdkFocusInitial [disabled]="viewLoading">OK
                 </button>
             </div>
