--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -284,7 +284,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group kt-form__group row mb-3">
+                        <div class="form-group kt-form__group row mb-3 mt-4">
                             <div class="col-lg-12 kt-margin-bottom-20-mobile">
                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                     <mat-label class="customMatLabel">Enter Current Address <strong
